Disable riffle of mat-icon buttons in room-view

--- a/src/app/components/creator/room-creator-page/room-creator-page.component.html
+++ b/src/app/components/creator/room-creator-page/room-creator-page.component.html
@@ -48,16 +48,16 @@
       </mat-card-content>
       <mat-grid-list cols="{{viewModuleCount}}" rowHeight="1:1">
         <mat-grid-tile>
-          <button id="question_answer-button"
-                  mat-icon-button routerLink="/creator/room/{{ room.shortId }}/comments" aria-labelledby="question_answer">
+          <button id="question_answer-button" mat-icon-button [disableRipple]="true"
+                  routerLink="/creator/room/{{ room.shortId }}/comments" aria-labelledby="question_answer">
             <mat-icon matBadge="{{commentCounter}}" class="main-icon"
                       [ngClass]="{'desktop' : deviceType === 'desktop'}">question_answer</mat-icon>
             <h2>{{ 'room-page.comments' | translate}}</h2> <!-- *ngIf="deviceType === 'desktop'" -->
           </button>
         </mat-grid-tile>
         <mat-grid-tile *ngIf="moderationEnabled">
-          <button id="gavel-button"
-                  mat-icon-button routerLink="/moderator/room/{{ room.shortId }}/moderator/comments" aria-labelledby="gavel">
+          <button id="gavel-button" mat-icon-button [disableRipple]="true"
+                  routerLink="/moderator/room/{{ room.shortId }}/moderator/comments" aria-labelledby="gavel">
             <mat-icon matBadge="{{moderatorCommentCounter}}" class="main-icon"
                       [ngClass]="{'desktop' : deviceType === 'desktop'}">gavel
             </mat-icon>
