Set max-height for comment-dialog and fix colors

--- a/src/app/components/shared/_dialogs/present-comment/present-comment.component.html
+++ b/src/app/components/shared/_dialogs/present-comment/present-comment.component.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 <button id="exitButton" mat-raised-button (click)="onCloseClick()">
-  <mat-icon >exit_to_app</mat-icon>
+  <mat-icon class="exitIcon">exit_to_app</mat-icon>
 </button>
 <div id="comment">
   <p>
