--- a/src/app/components/shared/_dialogs/present-comment/present-comment.component.scss
+++ b/src/app/components/shared/_dialogs/present-comment/present-comment.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
-  min-height: 90vh;
+  max-height: 90vh;
   font-size: 2.1em;
   margin: 5%;
   white-space: pre-line;
@@ -21,12 +21,16 @@
 }
 
 #exitButton {
-  background-color: var(--dialog);
+  background-color: var(--primary);
   color: black;
   position:absolute;
   top:2em;
   right:2em;
   max-height: 100px;
+}
+
+.exitIcon {
+  color: var(--on-primary);
 }
 
 mat-icon {
