Finish labeling of /home dialogs: Add labels to password-reset, user-activation. Start labeling of /shared: Add labels to login. Move user-activation to seperate section in i18n files.

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -13,7 +13,7 @@
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
-  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="submit">
+  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="submit" aria-labelledby="password-reset-button-description">
     {{ 'password-reset.reset-password' | translate }}
   </button>
 </form>
@@ -61,7 +61,7 @@
       {{ 'password-reset.key-required' | translate }}
     </mat-error>
   </mat-form-field>
-  <button mat-flat-button type="submit">
+  <button mat-flat-button type="submit" aria-labelledby="password-set-button-description">
     {{ 'password-reset.set-new-password-button' | translate }}
   </button>
 </form>
@@ -73,4 +73,6 @@
 
 <div class="visually-hidden">
   <div id="password-reset-description">{{ 'password-reset.email-description' | translate }}</div>
+  <div id="password-reset-button-description">{{ 'password-reset.reset-button-description' | translate }}</div>
+  <div id="password-set-button-description">{{ 'password-reset.set-button-description' | translate }}</div>
 </div>
