--- a/src/app/components/home/_dialogs/user-activation/user-activation.component.html
+++ b/src/app/components/home/_dialogs/user-activation/user-activation.component.html
@@ -2,21 +2,19 @@
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput #userActivationKey type="text" placeholder="{{ 'login.activation-key' | translate }}"
+           matInput #userActivationKey type="text" placeholder="{{ 'user-activation.activation-key' | translate }}"
            [formControl]="activationKeyFormControl" name="activation-key"
            aria-labelledby="activation-key-input-description"/>
-    <mat-error *ngIf="activationKeyFormControl.hasError('required')">{{ 'login.activation-key-required' | translate }}</mat-error>
+    <mat-error *ngIf="activationKeyFormControl.hasError('required')">{{ 'user-activation.activation-key-required' | translate }}</mat-error>
   </mat-form-field>
 </form>
 <app-dialog-action-buttons
-  buttonsLabelSection="login"
+  buttonsLabelSection="user-activation"
   confirmButtonLabel="activate"
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
   [confirmButtonClickAction]="buildActivationActionCallback(userActivationKey)"
 ></app-dialog-action-buttons>
 
 <div class="visually-hidden">
-  <div id="activation-key-input-description">
-    {{ 'login.activation-key-input-description' | translate }}
-  </div>
+  <div id="activation-key-input-description">{{ 'user-activation.activation-key-input-description' | translate }}</div>
 </div>
