--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="space-around">
-  <button (click)="guestLogin()" class="guest" mat-flat-button type="button"
+  <button (click)="guestLogin()" class="guest" mat-flat-button type="button" aria-labelledby="guest-login-description"
           matTooltip="{{'login.guest-login-tooltip' | translate}}">
     {{ 'login.guest-login' | translate }}
   </button>
@@ -29,7 +29,7 @@
            aria-labelledby="password-description"/>
     <mat-error *ngIf="passwordFormControl.hasError('required')">{{ 'login.password-required' | translate }}</mat-error>
   </mat-form-field>
-  <button class="login" mat-flat-button type="submit">
+  <button class="login" mat-flat-button type="submit" aria-labelledby="login-description">
     {{ 'login.login' | translate }}
   </button>
   <div class="forgot-password">
@@ -51,11 +51,12 @@
 <app-dialog-action-buttons
   [spacing]="false"
   buttonsLabelSection="login"
-  confirmButtonLabel="login"
   [cancelButtonClickAction]="buildCloseDialogActionCallback()"
 ></app-dialog-action-buttons>
 
 <div class="visually-hidden">
   <div id="email-description">{{ 'login.email-description' | translate }}</div>
   <div id="password-description">{{ 'login.password-description' | translate }}</div>
+  <div id="login-description">{{ 'login.login-description' | translate }}</div>
+  <div id="guest-login-description">{{ 'login.guest-login-description' | translate }}</div>
 </div>
