Add visual response to join and new session button

--- a/src/app/components/shared/room-join/room-join.component.scss
+++ b/src/app/components/shared/room-join/room-join.component.scss
@@ -58,3 +58,8 @@ input:-webkit-autofill {
 mat-error{
   color:var(--on-surface);
 }
+
+#session_enter-button:focus {
+  background: var(--on-surface);
+  color: var(--background);
+}
