remove boldness from h3

--- a/src/app/components/moderator/room-moderator-page/room-moderator-page.component.scss
+++ b/src/app/components/moderator/room-moderator-page/room-moderator-page.component.scss
@@ -85,7 +85,8 @@ h2 {
  }
 
 h3 {
-  font-size: larger;
+  font-size: medium;
+  font-weight: normal;
   color: var(--on-surface)!important;
   margin: 5% 5% 0 0;
 }
