correct text color for <p> in all themes

--- a/src/app/components/creator/room-creator-page/room-creator-page.component.scss
+++ b/src/app/components/creator/room-creator-page/room-creator-page.component.scss
@@ -90,11 +90,8 @@ h2 {
   margin: 5% 5% 0 0;
 }
 
-h3 {
-  font-size: medium;
-  font-weight: normal;
+p {
   color: var(--on-surface)!important;
-  padding: 0 1% 0 1%;
 }
 
 mat-card-header {
