--- a/src/app/components/moderator/room-moderator-page/room-moderator-page.component.scss
+++ b/src/app/components/moderator/room-moderator-page/room-moderator-page.component.scss
@@ -84,11 +84,8 @@ h2 {
    color: var(--on-surface)!important;
  }
 
-h3 {
-  font-size: medium;
-  font-weight: normal;
+p {
   color: var(--on-surface)!important;
-  margin: 5% 5% 0 0;
 }
 
 h4 {
