--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,7 @@ main {
   left:0;
   top:0;
   z-index:2;
+  transition:all 0.2s ease-in-out;
 }
 
 .footer{
@@ -42,12 +43,13 @@ main {
   left:0;
   bottom:0;
   z-index:2;
+  transition:all 0.2s ease-in-out;
 }
 
 .rescale_overlay{
   width:190px;
   height:50px;
-  border-radius:25px;
+  border-radius:0px 25px 25px 0px;
   background-color:var(--surface);
   position:fixed;
   left:15px;
@@ -55,6 +57,7 @@ main {
   z-index:2;
   display:none;
   box-shadow:0px 2px 4px rgba(0,0,0,0.5);
+  transition:all 0.2s ease-in-out;
 }
 
 .rescale_overlay>button{
