add a11y to the password reset button and to the email input for set a new password

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -14,7 +14,7 @@
       {{ 'password-reset.email-invalid' | translate }}
     </mat-error>
   </mat-form-field>
-  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="submit">
+  <button (click)="buildCloseDialogActionCallback()" mat-flat-button type="submit" aria-labelledby="password-reset-button">
     {{ 'password-reset.reset-password' | translate }}
   </button>
 </form>
@@ -28,7 +28,8 @@
 <form (ngSubmit)="setNewPassword(email2.value, key.value, password1.value)" fxLayout="column" fxLayoutAlign="space-around"
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
-    <input matInput type="email" #email2 [formControl]="usernameFormControl2"
+    <input matInput type="email" #email2
+           [formControl]="usernameFormControl2" aria-labelledby="password-set-description"
            [errorStateMatcher]="matcher" name="email"/>
     <mat-placeholder class="placeholder">{{ 'password-reset.email' | translate }}</mat-placeholder>
     <mat-error *ngIf="usernameFormControl2.hasError('email') && !usernameFormControl2.hasError('required')">
@@ -77,4 +78,6 @@
 
 <div class="visually-hidden">
   <div id="password-reset-description">{{ 'password-reset.email-description' | translate }}</div>
+  <div id="password-reset-button">{{ 'password-reset.a11y-password_reset_button' | translate }}</div>
+  <div id="password-set-description">{{ 'password-reset.a11y-password_set_email' | translate }}</div>
 </div>
