add a11y to the input for the new password

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -38,7 +38,7 @@
   </mat-form-field>
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="password" #password1 [formControl]="passwordFormControl"
+           matInput type="password" #password1 [formControl]="passwordFormControl" aria-labelledby="new-password1"
            [errorStateMatcher]="matcher"/>
     <mat-placeholder class="placeholder">{{ 'register.password' | translate }}</mat-placeholder>
     <mat-error *ngIf="passwordFormControl.hasError('required')">
@@ -80,4 +80,5 @@
   <div id="password-reset-description">{{ 'password-reset.email-description' | translate }}</div>
   <div id="password-reset-button">{{ 'password-reset.a11y-password_reset_button' | translate }}</div>
   <div id="password-set-description">{{ 'password-reset.a11y-password_set_email' | translate }}</div>
+  <div id="new-password1">{{ 'password-reset.a11y-new_password1' | translate }}</div>
 </div>
