add a11y to the input for the new password2 and the password reset key

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -48,7 +48,7 @@
 
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="password" #password2 [formControl]="passwordFormControl2"
+           matInput type="password" #password2 [formControl]="passwordFormControl2" aria-labelledby="new-password2"
            [errorStateMatcher]="matcher"/>
     <mat-placeholder class="placeholder">{{ 'register.password-verify' | translate }}</mat-placeholder>
     <mat-error *ngIf="passwordFormControl2.hasError('required')">
@@ -60,7 +60,8 @@
   </mat-form-field>
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="text" #key [formControl]="keyFormControl" [errorStateMatcher]="matcher"/>
+           matInput type="text" #key [formControl]="keyFormControl" aria-labelledby="password-reset-key"
+           [errorStateMatcher]="matcher"/>
     <mat-placeholder class="placeholder">{{ 'password-reset.key' | translate }}</mat-placeholder>
     <mat-error *ngIf="keyFormControl.hasError('required')">
       {{ 'password-reset.key-required' | translate }}
@@ -81,4 +82,6 @@
   <div id="password-reset-button">{{ 'password-reset.a11y-password_reset_button' | translate }}</div>
   <div id="password-set-description">{{ 'password-reset.a11y-password_set_email' | translate }}</div>
   <div id="new-password1">{{ 'password-reset.a11y-new_password1' | translate }}</div>
+  <div id="new-password2">{{ 'password-reset.a11y-new_password2' | translate }}</div>
+  <div id="password-reset-key">{{ 'password-reset.a11y-password_reset_key' | translate }}</div>
 </div>
