add a11y to the set password button

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -67,7 +67,7 @@
       {{ 'password-reset.key-required' | translate }}
     </mat-error>
   </mat-form-field>
-  <button mat-flat-button type="submit">
+  <button mat-flat-button type="submit" aria-labelledby="password-set-button">
     {{ 'password-reset.set-new-password-button' | translate }}
   </button>
 </form>
@@ -84,4 +84,5 @@
   <div id="new-password1">{{ 'password-reset.a11y-new_password1' | translate }}</div>
   <div id="new-password2">{{ 'password-reset.a11y-new_password2' | translate }}</div>
   <div id="password-reset-key">{{ 'password-reset.a11y-password_reset_key' | translate }}</div>
+  <div id="password-set-button">{{ 'password-reset.a11y-password_set_button' | translate }}</div>
 </div>
