add live announcer to delete account

--- a/src/app/components/shared/_dialogs/delete-account/delete-account.component.html
+++ b/src/app/components/shared/_dialogs/delete-account/delete-account.component.html
@@ -15,3 +15,7 @@
     [confirmButtonClickAction]="buildDeleteAccountActionCallback()"
   ></app-dialog-action-buttons>
 </div>
+
+<div class="visually-hidden">
+  <div id="delete-account">{{ 'header.a11y-delete_account' | translate }}</div>
+</div>
