add live announcer to password reset

--- a/src/app/components/home/_dialogs/password-reset/password-reset.component.html
+++ b/src/app/components/home/_dialogs/password-reset/password-reset.component.html
@@ -6,8 +6,8 @@
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
     <input (focus)="eventService.makeFocusOnInputTrue()" (blur)="eventService.makeFocusOnInputFalse()"
-           matInput type="email" #email
-           [formControl]="usernameFormControl" aria-labelledby="password-reset-description"
+           aria-labelledby="password-reset-description"
+           matInput type="email" #email [formControl]="usernameFormControl"
            [errorStateMatcher]="matcher" name="email"/>
     <mat-placeholder class="placeholder">{{ 'password-reset.email' | translate }}</mat-placeholder>
     <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
@@ -28,9 +28,8 @@
 <form (ngSubmit)="setNewPassword(email2.value, key.value, password1.value)" fxLayout="column" fxLayoutAlign="space-around"
       fxLayoutGap="10px">
   <mat-form-field class="input-block">
-    <input matInput type="email" #email2
-           [formControl]="usernameFormControl2" aria-labelledby="password-set-description"
-           [errorStateMatcher]="matcher" name="email"/>
+    <input aria-labelledby="password-set-description" matInput type="email" #email2
+           [formControl]="usernameFormControl2" [errorStateMatcher]="matcher" name="email"/>
     <mat-placeholder class="placeholder">{{ 'password-reset.email' | translate }}</mat-placeholder>
     <mat-error *ngIf="usernameFormControl2.hasError('email') && !usernameFormControl2.hasError('required')">
       {{ 'password-reset.email-invalid' | translate }}
