--- a/src/app/components/shared/room-list/room-list.component.html
+++ b/src/app/components/shared/room-list/room-list.component.html
@@ -70,7 +70,13 @@
           </th>
           <td mat-cell *matCellDef="let room" style="text-align: end"
               attr.aria-labelledby="empty">
-            <button mat-flat-button type="button" class="delete-button"> <mat-icon> delete </mat-icon></button>
+
+            <button mat-flat-button type="button" class="delete-button"  (click)="delete(room);">
+              <mat-icon>
+                remove
+              </mat-icon>
+            </button>
+
             <button mat-flat-button type="button"
                     attr.aria-labelledby="{{ 'joinButtonLabel' + room.shortId | translate }}"
                     name="{{ 'room-list.panel-join-button' | translate }}"
