Solve issues after code review, add visual response at login, cookies and join/create session

--- a/src/app/components/home/user-home/user-home.component.scss
+++ b/src/app/components/home/user-home/user-home.component.scss
@@ -15,3 +15,8 @@ app-room-list {
 h1 {
   color: var(--on-surface)!important;
 }
+
+.focus_button:focus {
+  background: var(--on-surface);
+  color: var(--background);
+}
