--- a/src/app/components/home/user-home/user-home.component.html
+++ b/src/app/components/home/user-home/user-home.component.html
@@ -4,7 +4,7 @@
     <app-room-join></app-room-join>
   </div>
   <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="15px">
-    <button mat-raised-button (click)="openCreateRoomDialog()" id="create_session-button">
+    <button class="focus_button" mat-raised-button (click)="openCreateRoomDialog()" id="create_session-button">
       <mat-icon>add</mat-icon>
       {{ 'home-page.create-session' | translate }}
     </button>
