Add suitable bilingual texts next to the filter function icons

--- a/src/app/components/shared/comment-list/comment-list.component.html
+++ b/src/app/components/shared/comment-list/comment-list.component.html
@@ -66,26 +66,31 @@
       <button mat-menu-item (focus)="hideCommentsList=true" matTooltip="{{ 'comment-list.correct' | translate }}"
               (click)="filterComments(correct)" aria-labelledby="check_circle">
         <mat-icon [ngClass]="{correct: 'correct-icon'}[currentFilter]">check_circle</mat-icon>
+        <span>{{ 'comment-list.filter-correct' | translate }}</span>
       </button>
 
       <button mat-menu-item (focus)="hideCommentsList=true" matTooltip="{{ 'comment-list.wrong' | translate }}"
               (click)="filterComments(wrong)" aria-labelledby="not_interested">
         <mat-icon [ngClass]="{wrong: 'wrong-icon'}[currentFilter]">not_interested</mat-icon>
+        <span>{{ 'comment-list.filter-wrong' | translate }}</span>
       </button>
 
       <button mat-menu-item (focus)="hideCommentsList=true" matTooltip="{{ 'comment-list.favorite' | translate }}"
               (click)="filterComments(favorite)" aria-labelledby="grade">
         <mat-icon [ngClass]="{favorite: 'favorite-icon'}[currentFilter]">grade</mat-icon>
+        <span>{{ 'comment-list.filter-favorite' | translate }}</span>
       </button>
 
       <button mat-menu-item (focus)="hideCommentsList=true" matTooltip="{{ 'comment-list.read' | translate }}"
               (click)="filterComments(read)" aria-labelledby="beamer_icon">
         <mat-icon svgIcon="beamer" [ngClass]="{read: 'beamer-icon'}[currentFilter]"></mat-icon>
+        <span>{{ 'comment-list.filter-read' | translate }}</span>
       </button>
 
       <button mat-menu-item (focus)="hideCommentsList=false" (click)="sortComments(currentSort); filterComments('')"
               aria-labelledby="close">
         <mat-icon>close</mat-icon>
+        <span>{{ 'comment-list.filter-reset' | translate }}</span>
       </button>
     </div>
   </mat-menu>
