--- a/src/app/components/shared/login/login.component.scss
+++ b/src/app/components/shared/login/login.component.scss
@@ -10,7 +10,7 @@
 .guest {
   background-color: var(--primary);
   color: var(--on-primary);
-  margin: 10px 0 20px 0!important;
+  margin-bottom: 10px;
 }
 
 .login {
