Add tokens for bonus points
Whenever a comment gets favorited, a token will be generated.
Participants can view theirs under the 'user account menu' in the header.
Session owners can view the given tokens for the room in the settings drop down menu for a room

--- a/src/app/components/creator/room-creator-page/room-creator-page.component.html
+++ b/src/app/components/creator/room-creator-page/room-creator-page.component.html
@@ -35,6 +35,10 @@
             <mat-icon>gavel</mat-icon>
             {{ 'room-page.moderators' | translate}}
           </button>
+          <button mat-menu-item (click)="showBonusTokenDialog()" aria-labelledby= "person">
+            <mat-icon>grade</mat-icon>
+            {{ 'room-page.bonus-token' | translate}}
+          </button>
         </mat-menu>
         <button  id="settings-menu"
                  mat-icon-button class="corner-icons" [matMenuTriggerFor]="settingsMenu" aria-labelledby="settings">
