--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -34,6 +34,10 @@
         <span *ngIf="!user.isGuest">{{'header.my-sessions' | translate}}</span>
         <span *ngIf="user.isGuest" svgIcon="meeting_room">{{'header.visited-sessions' | translate}}</span>
       </button>
+      <button mat-menu-item *ngIf="user" (click)="openUserBonusTokenDialog()">
+        <mat-icon color="warn">grade</mat-icon>
+        <span>{{'header.user-bonus-token' | translate}}</span>
+      </button>
       <button mat-menu-item *ngIf="user && !user.isGuest" (click)="openDeleteUserDialog()">
         <mat-icon color="warn">delete</mat-icon>
         <span>{{'header.delete-account' | translate}}</span>
