Scroll-To-Top Button for Moderator-Comment-List, Fix for Firefox Body-Scroll-Bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,12 @@
 // that you are using.
 @include angular-material-theme($arsnova-theme);
 
+body{
+  width:100%;
+  height:100%;
+  overflow:hidden;
+}
+
 ::-webkit-scrollbar{
   width:2px;
   background-color:var(--on-secondary);
@@ -58,7 +64,5 @@
 .placeholder {
   color: var(--on-surface);
 }
-
-
 
 
