--- a/src/app/components/creator/_dialogs/delete-comments/delete-comments.component.html
+++ b/src/app/components/creator/_dialogs/delete-comments/delete-comments.component.html
@@ -1,6 +1,7 @@
 <h1>{{ 'room-page.sure' | translate }}</h1>
 <mat-divider></mat-divider>
 <p>{{ 'room-page.really-delete-comments' | translate }}</p>
+<p><i>{{ 'room-page.really-delete-comments-hint' | translate }}</i></p>
 <app-dialog-action-buttons
   buttonsLabelSection="content"
   confirmButtonLabel="delete"
