--- a/src/app/components/home/_dialogs/demo-video/demo-video.component.html
+++ b/src/app/components/home/_dialogs/demo-video/demo-video.component.html
@@ -1,4 +1,8 @@
 <h2 tabindex="0" class="modal" mat-dialog-title>{{ 'introduction.title' | translate }}</h2>
+<h2 tabindex="0" class="overflow_hide" mat-dialog-title>
+  <ng-container *ngIf="currentLang=='en'">You're on the introduction page. Press 1 2 times to start a demonstration video, press 2 2 times for a transcript of the video, or press 3 2 times to get information about the frag.jetzt project.</ng-container>
+  <ng-container *ngIf="currentLang=='de'">Du befindest dich auf der Einführungsseite. Drücke die 1 2 mal um ein Demonstrationsvideo zu starten, die 2 2mal für ein Transskript des Videos oder die 3 2 mal um Informationen über das frag.jetzt-Projekt zu erhalten.</ng-container>
+</h2>
 <mat-divider></mat-divider>
 <mat-dialog-content>
   <div id="setFocus" class="intro-text" tabindex="0">
