Fix having to double click number to select in introduction page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <script src="models/rescale.ts"></script>
-<div fxLayout="column" fxFill appTheme>
+<div fxLayout="column" fxFill appTheme id="outer_main_container">
   <header class="header" id="header_rescale">
     <app-header #header></app-header>
   </header>
