--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,4 +65,57 @@ body{
   color: var(--on-surface);
 }
 
+/*Mat-Dialog-Container - Full-Width*/
 
+.full-width .mat-dialog-container{
+  width:1000px;
+  min-width: 1000px;
+  max-width: 1000px;
+  height:calc( 100% - 50px );
+  margin:0;
+  padding:25px;
+  position:fixed;
+  left:calc( 50% - 500px );
+  top:25px;
+}
+
+@media (max-width: 1100px) {
+  .full-width .mat-dialog-container{
+    width:calc( 100% - 10px );
+    min-width:calc( 100% - 10px );
+    max-width:calc( 100% - 10px );
+    height:calc( 100% - 10px );
+    left:5px;
+    top:5px;
+  }
+}
+
+@media (max-width: 350px) {
+  .full-width .mat-dialog-container{
+    padding:10px;
+  }
+}
+
+/*Mat-Dialog-Container - Content-Layout*/
+
+.dialog-wrapper{
+  width:100%;
+  height:100%;
+  float:left;
+  display:flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.dialog-row{
+  width:100%;
+  height:50px;
+  flex-shrink: 0;
+}
+
+.dialog-fill{
+  display:flex;
+  flex-grow: 1;
+  overflow-x:hidden;
+  overflow-y:auto;
+}
