WIP rescale fullscreen and message fullscreen bug-fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   </footer>
   <div class="rescale_overlay" id="overlay_rescale" aria-hidden="true">
     <button mat-icon-button (click)="getRescale().toggleState()" title="toggle">
-      <mat-icon>{{getRescale().getState()==1?'fullscreen':'fullscreen_exit'}}</mat-icon>
+      <mat-icon>fullscreen_exit</mat-icon>
     </button>
     <button mat-icon-button (click)="getRescale().scaleUp()" title="Zoom +">
       <mat-icon>zoom_in</mat-icon>
