--- a/src/app/components/shared/room-join/room-join.component.html
+++ b/src/app/components/shared/room-join/room-join.component.html
@@ -4,6 +4,7 @@
     <mat-form-field (keyup.enter)="onEnter()">
       <input
         id="session_id-input"
+        autocomplete="cc-number"
         matInput
         #roomId
         (focus)="eventService.makeFocusOnInputTrue()"
@@ -19,7 +20,7 @@
       <mat-error *ngIf="roomFormControl.hasError('required')" aria-hidden="true">{{ 'home-page.please-enter' | translate}}</mat-error>
       <mat-error *ngIf="roomFormControl.hasError('pattern')">{{ 'home-page.only-numbers' | translate}}</mat-error>
     </mat-form-field>
-    <button [disabled]="cookiesDisabled()" id="session_enter-button" mat-fab type="submit" aria-labelledby="join-button-label">
+    <button [disabled]="cookiesDisabled()" id="session_enter-button" mat-fab class="fab-extended" type="submit" aria-labelledby="join-button-label">
       <mat-icon>input</mat-icon>
     </button>
   </div>
