WIP: QR-Code Dialog and QR-Code Lib Integration

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -23,7 +23,8 @@
       gavel
     </mat-icon>
   </span>
-    <h2 id="shortId-header" *ngIf="router.url.includes('comments')" fxLayoutAlign="center center">
+    <h2 id="shortId-header" *ngIf="router.url.includes('comments')"
+        fxLayoutAlign="center center" (click)="showQRDialog();">
       {{'header.id' | translate}}: {{ shortId.slice(0, 4) }} {{  shortId.slice(4, 8) }}
     </h2>
     <span class="fill-remaining-space"></span>
