--- a/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.html
+++ b/src/app/components/shared/_dialogs/qr-code-dialog/qr-code-dialog.component.html
@@ -1,5 +1,12 @@
 
 
-<div class="imgWrp">
-  <ngx-qrcode></ngx-qrcode>
-</div>
+<ars-screen>
+  <div class="qr_content" #imageWrapper>
+    <ngx-qrcode></ngx-qrcode>
+  </div>
+  <div class="qr_header">
+    <button mat-icon-button (click)="close();">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+  </div>
+</ars-screen>
