--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -24,12 +24,15 @@
     </mat-icon>
   </span>
     <h2 id="shortId-header" *ngIf="router.url.includes('comments')"
-        fxLayoutAlign="center center" (click)="showQRDialog();">
+        fxLayoutAlign="center center">
       {{'header.id' | translate}}: {{ shortId.slice(0, 4) }} {{  shortId.slice(4, 8) }}
     </h2>
     <h2 *ngIf="router.url.includes('home')" fxLayoutAlign="center center">
       {{ 'header.home-header' | translate }}
     </h2>
+    <button mat-icon-button (click)="showQRDialog();">
+      <mat-icon class="header-icons">face</mat-icon>
+    </button>
     <span class="fill-remaining-space"></span>
 
     <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
